# api_training

./: .gitignore  Dockerfile  pyproject.toml  roman_converter-0.1.0-py3-none-any.whl
.github/workflows/: ci-workflow.yml  hello-world.yml
src/api_training/: api.py  database.py  models.py
terraform/: .terraform.lock.hcl  main.tf  state.tf  tfplan  variables.tf
